# EMBEDDED-ROADMAP-Advanced

cmake-basics/: CMakeLists.txt  commands.txt
docker-cmake-workflow/: CMakeLists.txt  Dockerfile  commands.txt
docker-cmake-workflow/src/: main.c
docker-for-toolchains/: Dockerfile  Makefile  commands.txt  linker.ld  startup.s
docker-for-toolchains/src/: main.c
modular-firmware-architecture/: build.sh
modular-firmware-architecture/code/app/: main.c
modular-firmware-architecture/code/app/control/: CMakeLists.txt
modular-firmware-architecture/code/app/control/alarm_controller/: CMakeLists.txt
modular-firmware-architecture/code/app/control/alarm_controller/include/: alarm_controller.h
modular-firmware-architecture/code/app/control/alarm_controller/src/: alarm_controller.c
modular-firmware-architecture/code/app/control/heater_controller/: CMakeLists.txt
modular-firmware-architecture/code/app/control/heater_controller/include/: heater_controller.h
modular-firmware-architecture/code/app/control/heater_controller/src/: heater_controller.c
modular-firmware-architecture/code/drivers/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_buzzer/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_buzzer/cfg/: hal_buzzer_cfg.c
modular-firmware-architecture/code/drivers/hal_buzzer/include/: hal_buzzer.h
modular-firmware-architecture/code/drivers/hal_buzzer/src/: hal_buzzer.c
modular-firmware-architecture/code/drivers/hal_heater/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_heater/cfg/: hal_heater_cfg.c
modular-firmware-architecture/code/drivers/hal_heater/include/: hal_heater.h
modular-firmware-architecture/code/drivers/hal_heater/src/: hal_heater.c
modular-firmware-architecture/code/drivers/hal_hum_sensor/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_hum_sensor/cfg/: hal_hum_sensor_cfg.c
modular-firmware-architecture/code/drivers/hal_hum_sensor/include/: hal_hum_sensor.h
modular-firmware-architecture/code/drivers/hal_hum_sensor/src/: hal_hum_sensor.c
modular-firmware-architecture/code/middleware/actuators/cfg/: actuators_cfg.c
modular-firmware-architecture/code/middleware/sensors/cfg/: sensors_cfg.c
